# dsi

./: .buildinfo  .gitignore  .gitmodules  CKAN_Backend_Report.md  README.md  README.rst  backends.html  cli.html  cli_api.html  contributing_readers.html  contributors.html  core.html  cr_examples.html  cr_intro.html  custom_reader.html  custom_writer.html  dev_readers.html  dev_writers.html  development.html  drivers.html  examples.html  examples_dev.html  examples_user.html  federation.html  genindex.html  index.html  installation.html  intro-dev.html  intro-users.html  introduction.html  objects.inv  permissions.html  plugins.html  py-modindex.html  pyproject.toml  python_api.html  readers_writers.html  requirements.extras.txt  requirements.heavy.txt  requirements.txt  (+6 more)
.doctrees/: backends.doctree  cli.doctree  cli_api.doctree  contributing_readers.doctree  contributors.doctree  core.doctree  cr_examples.doctree  cr_intro.doctree  custom_reader.doctree  custom_writer.doctree  dev_readers.doctree  dev_writers.doctree  development.doctree  drivers.doctree  environment.pickle  examples.doctree  examples_dev.doctree  examples_user.doctree  federation.doctree  index.doctree  installation.doctree  intro-dev.doctree  intro-users.doctree  introduction.doctree  permissions.doctree  plugins.doctree  python_api.doctree  readers_writers.doctree  sync.doctree  tiers.doctree
.githooks/: README.rst  post-commit  pre-commit
_sources/: backends.rst.txt  cli.rst.txt  cli_api.rst.txt  contributors.rst.txt  core.rst.txt  cr_intro.rst.txt  custom_reader.rst.txt  custom_writer.rst.txt  development.rst.txt  federation.rst.txt  index.rst.txt  installation.rst.txt  intro-dev.rst.txt  introduction.rst.txt  permissions.rst.txt  plugins.rst.txt  python_api.rst.txt  tiers.rst.txt
cinema_viewers/: .gitignore  cinema_explorer.html
data/: yosemite5.csv
docs/: .gitignore  Makefile  README.rst  backends.rst  cli.rst  cli_api.rst  conf.py  contributing_readers.rst  contributors.rst  core.rst  cr_examples.rst  cr_intro.rst  custom_reader.rst  dev_readers.rst  dev_writers.rst  drivers.rst  dsi.rst  examples.rst  examples_dev.rst  examples_user.rst  fs.rst  index.rst  installation.rst  intro-dev.rst  intro-users.rst  introduction.rst  permissions.rst  plugins.rst  python_api.rst  quickstart.rst  readers_writers.rst  sync.rst  tiers.rst
dsi/: __init__.py  backend_duckdb.py  backend_sqlite.py  ckan_discovery.py  cli.py  core.py  db_utils.py  dsi.py  dsi_shim.py  dsifederated.py  sync.py
dsi-env/: pyvenv.cfg
examples/: ai_test.ipynb  cli.py  cli_2.py  coreterminal.py  db_utils.py  dsi_cli.py  dsi_diana_tutorial.ipynb  dsi_shim.py  dsi_test.py  dsi_tutorial.ipynb  dsi_wildfire.py  dsi_wildfire_query.py  example_csv.txt  example_fetch.txt  example_load.txt  example_notebook.ipynb  genesis_demo_readme.md  genesis_wildfire.ipynb  movie.mpg  perf_analyzer  table.py  wildfire_example.txt
htmlcov/: d_30a50bf049170464_test_env_py.html  d_54b267feee0cd80c_test_env_py.html  d_54b267feee0cd80c_test_file_consumer_py.html  d_6361f3bb962fa186_test_permissions_py.html  d_81b25cc262ca2144_test_core_py.html  d_843ff3ab609e65bd_test_gufi_py.html  d_843ff3ab609e65bd_test_sqlite_py.html  (+5 more)
(+743 files in other folders)
