[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="dsi-workflow"
license={text = "BSD-3-Clause"}
description="A Data Science Infrastructure Project"
readme = "README.rst"
authors=[
	{name = 'Jesus Pulido', 	email = 'pulido@lanl.gov'},
	{name = 'James Ahrens', 	email = 'ahrens@lanl.gov'},
	{name = 'Divya Banesh', 	email = 'dbanesh@lanl.gov'},
	{name = 'Hugh Greenberg', 	email = 'hng@lanl.gov'},
	{name = 'Pascal Grosset', 	email = 'pascalgrosset@lanl.gov'},
	{name = 'Vedant Iyer', 		email = 'iyer@lanl.gov'},
	{name = 'Benjamin Sims', 	email = 'bsims@lanl.gov'},
	{name = 'Terece Turton', 	email = 'tlturton@lanl.gov'},
	]
classifiers=["Programming Language :: Python"]

dynamic = ["dependencies","version"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]} 

[tool.setuptools]
py-modules = ["dsi"]

[project.scripts]
dsi = "dsi.cli:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["clover3d"]